# LazyECS

./: .gitignore  README.md  demo.py  main.py  pyproject.toml  requirements.txt
lazyecs/: __init__.py
lazyecs/core/: __init__.py  scheduler.py  store.py  types.py  world.py
tests/: test_scheduler_basic.py  test_store_basic.py  test_world_basic.py
